# chess-llm

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: chess_evals.yaml  default.yaml  production.yaml
scripts/: PAPER_EXPERIMENTS_READY.md  README_CHESS_TRAINING.md  chess_train_config.py  chessbench_configs.py  chessbench_data_prep.py  download_lichess_pgn.sh  fen_eval.py  populate_antichess_evals.py  populate_chess_evals.py  prepare_chess_data.py  prepare_data_for_paper_experiments.py  quick_test_experiment.py  remove_duplicates.py  run_all_paper_experiments.sh  run_paper_experiments.py  setup_chess_training.py  train_chess.py
scripts/searchless_chess/checkpoints/local/state_value/0/: _CHECKPOINT_METADATA
scripts/searchless_chess/checkpoints/local/state_value/0/data_iter/: process_0-of-1.json
scripts/searchless_chess/checkpoints/local/state_value/0/opt_state/: manifest.ocdbt
scripts/searchless_chess/checkpoints/local/state_value/0/params/: _sharding  manifest.ocdbt
scripts/searchless_chess/checkpoints/local/state_value/20/: _CHECKPOINT_METADATA
scripts/searchless_chess/data/test/: action_value_data.bag  behavioral_cloning_data.bag  state_value_data.bag
scripts/searchless_chess/src/: training.py  training_utils.py
src/chess_llm/: __init__.py  cli.py
src/chess_llm/core/: __init__.py  config.py  constants.py  exceptions.py
src/chess_llm/data/: __init__.py  loader.py  processor.py
src/chess_llm/evaluation/: evaluator.py
src/chess_llm/models/: __init__.py  transformer.py
src/chess_llm/training/: trainer.py
src/chess_llm/utils/: __init__.py  checkpoints.py  metrics.py
tests/: test_integration.py
(+16 files in other folders)
